Fix Java AI workshop deployment reliability (#930)
* fix(infra): Address workshop security findings